[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | remoulade.egg-info
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "confirm_delivery",
    "group_transaction",
]
filterwarnings = [
    "error::sqlalchemy.exc.RemovedIn20Warning",
    "error::sqlalchemy.exc.MovedIn20Warning",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
